--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
-import Header from '../components/header.astro';
-import Layout from '../layouts/Layout.astro';
-
+import Header from "../components/Header.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Header />
+  <Header />
 </Layout>
