--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Card from "../components/Card.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
+import Reloj from "../components/Reloj.astro";
 ---
 
 <Layout>
   <Header />
   <Card/>
+  <Reloj/>
 </Layout>
