--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,4 @@
-<div class="w-full md:h-[1114px] bg-[#fff6e7] relative overflow-hidden">
+<div class="w-full md:h-[1114px] bg-[#fff6e7] relative overflow-hidden bottom-28 md:bottom-auto">
   <img
     src="./Hero.webp"
     alt="Hero Image"
@@ -41,60 +41,3 @@
   </div>
 </div>
 
-<style>
-      @keyframes slide-in-bottom-exaggerated {
-    0% {
-      transform: translateY(400%);
-      opacity: 0;
-    }
-    80% {
-      transform: translateY(-10%);
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes slide-in-left-exaggerated {
-    0% {
-      transform: translateX(-550%);
-      opacity: 0;
-    }
-    80% {
-      transform: translateX(10%);
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes slide-in-right-exaggerated {
-    0% {
-      transform: translateX(550%);
-      opacity: 0;
-    }
-    80% {
-      transform: translateX(-10%);
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  .animate-slide-in-bottom {
-    animation: slide-in-bottom-exaggerated 1s ease-out both ;
-    animation-delay: 0.3s;
-  }
-
-  .animate-slide-in-left {
-    animation: slide-in-left-exaggerated 1.3s ease-out both;
-  }
-
-  .animate-slide-in-right {
-    animation: slide-in-right-exaggerated 1.3s ease-out both;
-  }
-
-</style>
