--- a/src/components/Reloj.astro
+++ b/src/components/Reloj.astro
@@ -81,7 +81,11 @@
     <div
       class="md:w-1/2 flex justify-center md:justify-end animate-fade-in-exaggerated"
     >
-      <img src="./hierba.png" alt="" class="fixed -top-12" />
+      <img
+        src="./hierba.png"
+        alt=""
+        class="fixed -top-12 animate-fade-in-exaggerated"
+      />
 
       <img
         src="./reloj.webp"
