--- a/src/components/Reloj.astro
+++ b/src/components/Reloj.astro
@@ -39,7 +39,7 @@
   <section
     class="animate-slide-in-bottom flex flex-col items-center pt-8 text-pink-900 md:pt-16"
   >
-    <span class="text-4xl">Escucha mi canción</span>
+    <span class="text-4xl whitespace-nowrap">Escucha mi canción</span>
     <img
       id="play-button"
       src="./playbutton.svg"
