--- a/src/components/Reloj.astro
+++ b/src/components/Reloj.astro
@@ -58,19 +58,19 @@
       class="flex flex-col text-center md:text-left space-y-4 md:w-1/2 text-whit animate-slide-in-left"
     >
       <span
-        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 text-xs md:text-base mb-0"
+        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 text-xs md:text-base mb-0 md:w-80"
       >
         Mi vida ha sido como un ​libro, cada año es un ​capítulo, que con
         ​esfuerzo y dedicación he ​escrito.
       </span>
       <span
-        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 text-xs md:text-base mb-0"
+        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 text-xs md:text-base mb-0 md:w-80"
       >
         Al caer la noche en el ​cielo millones de ​estrellas podré contar, ​cada
         una de ellas es un ​deseo que en mi corazón ​voy a guardar.
       </span>
       <span
-        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 mb-4 text-xs md:text-base"
+        class="bg-opacity-30 rounded-md p-0.5 md:p-4 block w-36 mb-4 text-xs md:text-base md:w-80"
       >
         El día de hoy concluyó ​una etapa de mi vida y ​comienzo un nuevo
         ​camino como mujer.
@@ -79,18 +79,18 @@
 
     <!-- Imagen derecha -->
     <div
-      class="md:w-1/2 flex justify-center md:justify-end animate-fade-in-exaggerated"
+      class="relative md:w-1/2 flex justify-center md:justify-end animate-fade-in-exaggerated"
     >
       <img
         src="./hierba.png"
         alt=""
-        class="fixed -top-12 animate-fade-in-exaggerated"
+        class="absolute -top-12 left-0 animate-fade-in-exaggerated"
       />
 
       <img
         src="./reloj.webp"
         alt="Reloj"
-        class="rounded-lg shadow-lg max-w-full h-aut bg-white bg-opacity-30 p-2 md:p-4 pb-5 z-10"
+        class="rounded-lg shadow-lg max-w-full h-auto bg-white bg-opacity-30 p-2 md:p-4 pb-5 z-10"
       />
     </div>
   </section>
