--- a/src/components/Reloj.astro
+++ b/src/components/Reloj.astro
@@ -1,5 +1,5 @@
 <div
-  class="bg-[#d6aabc] min-h-max relative bottom-56 h-96 md:bottom-2.5 flex flex-col text-white font-mono px-4 md:h-[700px]"
+  class="bg-[#d6aabc] relative flex flex-col text-white font-mono px-4 py-10 min-h-screen md:min-h-[700px]"
 >
   <div
     id="countdown"
